--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -215,3 +215,53 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+@media screen and (max-width: 980px) {
+
+  .main-section { width: 100%;
+    background-color: orange;
+
+  }
+
+}
+@media screen and (max-width: 768px) {
+
+  .main-section { width: 100%;
+    background-color: green;
+
+  }
+
+}
+
+@media screen and (max-width: 640px) { 
+
+ul {
+  padding-inline-start: 0px;
+  cursor: none;
+}
+
+#main-container {
+  padding-top: 0px;
+}
+.work {
+  width: 100%;
+}
+  #logo{
+    width: 100%;
+  }
+  nav {
+    width: 100%;
+    float: none;
+    text-align: center;
+  }
+
+  #masthead {
+    position: static;
+  }
+
+  .main-section { width: 100%;
+    background-color: blue;
+
+  }
+
+}
